--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -240,7 +240,7 @@
                                 Gratis2.Gratis gratis = Gratis2.GratisCargar.DevolverGratis(juego.Tipo);
                             }
 
-                            <div style="display: flex; align-items: center; justify-content: center; gap: 20px;">
+                            <div style="display: flex; align-items: center; justify-content: center; gap: 20px; height: 40px;">
                                 <img src="@gratis.ImagenLogo" style="max-width: 140px; max-width: 140px;" alt="Store" />
 
                                 @if (gratis.DRMEnseñar == true)
