--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -666,8 +666,7 @@
 			{
 				juegosDestacadosMostrar = datosRestaurados;
 			}
-
-            if (juegosDestacadosMostrar == null)
+			else
             {
                 juegosDestacadosMostrar = BaseDatos.Portada.Buscar.Destacados(conexion);
             }	
