--- a/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
@@ -40,17 +40,20 @@
 
 	string descripcion = texto2;
 
-	string[] keywordsEnBruto = Herramientas.Buscador.LimpiarNombre(titulo, false).Split(' ');
-	List<string> keywordsLista = new List<string>();
-	keywordsLista.AddRange(keywordsEnBruto);
-
 	string keywords = "news";
 
-	foreach (string keyword in keywordsLista)
+	if (string.IsNullOrEmpty(titulo) == false)
 	{
-		if (keyword.Length > 3)
+		string[] keywordsEnBruto = Herramientas.Buscador.LimpiarNombre(titulo, false).Split(' ');
+		List<string> keywordsLista = new List<string>();
+		keywordsLista.AddRange(keywordsEnBruto);
+
+		foreach (string keyword in keywordsLista)
 		{
-			keywords = keywords + ", " + keyword;
+			if (keyword.Length > 3)
+			{
+				keywords = keywords + ", " + keyword;
+			}
 		}
 	}
 
@@ -236,7 +239,7 @@
 
 			@if (string.IsNullOrEmpty(noticia.GratisIds) == false)
 			{
-				<div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; gap: 20px; margin-top: 30px;">
+				<div style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 20px; margin-top: 30px;">
 					@{
 						List<string> ids = Herramientas.Listados.Generar(noticia.GratisIds);
 
@@ -248,9 +251,21 @@
 
 								if (gratis != null)
 								{
+									string imagen = gratis.Imagen;
+
+									if (gratis.JuegoId > 0)
+									{
+                                        var juego = BaseDatos.Juegos.Buscar.UnJuego(gratis.JuegoId);
+
+                                        if (juego.Tipo == Juegos.JuegoTipo.DLC)
+                                        {
+                                            imagen = juego.Imagenes.Header_460x215;
+                                        }
+									}
+
 									<a href="@Herramientas.EnlaceAcortador.Generar(gratis.Enlace, gratis.Tipo, usuarioPatreon)" class="boton-pequeño" style="padding: 2px;" target="_blank">
 										<div>
-											<img src="@gratis.Imagen" style="max-width: 100%; max-height: 100%;" alt="@gratis.Nombre" />
+											<img src="@imagen" style="max-width: 100%; max-height: 100%;" alt="@gratis.Nombre" />
 										</div>
 									</a>
 								}
@@ -295,7 +310,7 @@
 
 			@if (string.IsNullOrEmpty(noticia.SuscripcionesIds) == false)
 			{
-				<div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; gap: 20px; margin-top: 30px;">
+				<div style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 20px; margin-top: 30px;">
 					@{
 						List<string> ids = Herramientas.Listados.Generar(noticia.SuscripcionesIds);
 
