--- a/pepeizqs deals web/Pages/Componentes/Secciones/Api.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Api.razor
@@ -6,7 +6,6 @@
 	string enlace = "https://pepeizqdeals.com/api";
 	string imagen = "https://pepeizqdeals.com/logo/logoentrada.webp";
 
-	<PageTitle>@titulo</PageTitle>
 	<HeadContent>
 		<meta name="og:title" Content="@titulo" />
 		<meta name="description" content="@descripcion" />
@@ -15,7 +14,7 @@
 		<meta name="og:image" content="@imagen" />
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
-		<meta name="robots" content="index, nofollow, noimageindex, noai, noimageai" />
+		<meta name="robots" content="index, follow" />
 		<meta name="keywords" content="api, programming, source code" />
 
 		<link rel="canonical" href="@enlace" />
