--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -102,7 +102,6 @@
         }
     }
 
-    <PageTitle>@titulo</PageTitle>
     <HeadContent>
         <meta name="og:title" Content="@titulo" />
         <meta name="description" content="@descripcion" />
@@ -111,7 +110,7 @@
         <meta name="og:image" content="@imagen" />
         <meta name="og:site_name" content="pepeizq's deals" />
         <meta name="og:type" content="website" />
-        <meta name="robots" content="index, nofollow, noimageindex, noai, noimageai" />
+        <meta name="robots" content="index, follow" />
         <meta name="keywords" content="@keywords" />
 
         <link rel="canonical" href="@enlace" />
