--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -60,7 +60,6 @@
         }
     }
 
-    <PageTitle>@titulo</PageTitle>
     <HeadContent>
         <meta name="og:title" content="@titulo" />
         <meta name="description" content="@descripcion" />
@@ -70,7 +69,7 @@
         <meta name="og:video" content="@mediaMostrar" />
         <meta name="og:site_name" content="pepeizq's deals" />
         <meta name="og:type" content="website" />
-        <meta name="robots" content="index, nofollow, noimageindex, noai, noimageai" />
+        <meta name="robots" content="index, follow" />
         <meta name="keywords" content="@keywords" />
 
         <link rel="canonical" href="@enlace" />
