--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -21,7 +21,6 @@
 	string enlace = "https://pepeizqdeals.com/historical-lows/";
 	string imagen = "https://pepeizqdeals.com/logo/logoentrada.webp";
 
-	<PageTitle>@titulo</PageTitle>
 	<HeadContent>
 		<meta name="og:title" content="@titulo" />
 		<meta name="description" content="@descripcion" />
@@ -30,7 +29,7 @@
 		<meta name="og:image" content="@imagen" />
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
-		<meta name="robots" content="index, nofollow, noimageindex, noai, noimageai" />
+		<meta name="robots" content="index, follow" />
 		<meta name="keywords" content="deals, games, offers, historical, lows" />
 
 		<link rel="canonical" href="@enlace" />
