--- a/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
@@ -70,7 +70,7 @@
 		<meta name="robots" content="index, nofollow, noimageindex, noai, noimageai" />
 		<meta name="keywords" content="@keywords" />
 
-		<link rel="canonical" href="@enlace" />
+		<link rel="canonical" href="@enlace" hreflang="@idioma"/>
 	</HeadContent>
 }
 
