--- a/pepeizqs deals web/Pages/Componentes/Secciones/Patreon.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Patreon.razor
@@ -10,7 +10,6 @@
 	string enlace = "https://pepeizqdeals.com/patreon";
 	string imagen = "https://pepeizqdeals.com/logo/logoentradapatreon.webp";
 
-	<PageTitle>@titulo</PageTitle>
 	<HeadContent>
 		<meta name="og:title" Content="@titulo" />
 		<meta name="description" content="@descripcion" />
@@ -19,7 +18,7 @@
 		<meta name="og:image" content="@imagen" />
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
-		<meta name="robots" content="index, nofollow, noimageindex, noai, noimageai" />
+		<meta name="robots" content="index, follow" />
 		<meta name="keywords" content="patreon, help, source, code" />
 
 		<link rel="canonical" href="@enlace" />
