--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -20,7 +20,6 @@
 	string enlace = "https://pepeizqdeals.com/";
 	string imagen = "https://pepeizqdeals.com/logo/logoentrada.webp";
 
-	<PageTitle>@titulo</PageTitle>
 	<HeadContent>
 		<meta name="og:title" content="@titulo" />
 		<meta name="description" content="@descripcion" />
@@ -29,7 +28,7 @@
 		<meta name="og:image" content="@imagen" />
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
-		<meta name="robots" content="index, follow, noimageindex, noai, noimageai" />
+		<meta name="robots" content="index, follow" />
 		<meta name="keywords" content="deals, games, free, offers, bundles" />
 
 		<link rel="canonical" href="@enlace" />
