--- a/pepeizqs deals web/Pages/Componentes/Secciones/RSS.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/RSS.razor
@@ -6,7 +6,6 @@
 	string enlace = "https://pepeizqdeals.com/rss";
 	string imagen = "https://pepeizqdeals.com/logo/logoentrada.webp";
 
-	<PageTitle>@titulo</PageTitle>
 	<HeadContent>
 		<meta name="og:title" Content="@titulo" />
 		<meta name="description" content="@descripcion" />
@@ -15,8 +14,8 @@
 		<meta name="og:image" content="@imagen" />
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
-		<meta name="robots" content="index, nofollow, noimageindex" />
-		<meta name="keywords" content="deals, games, free, offers, bundles, noai, noimageai" />
+		<meta name="robots" content="index, follow" />
+		<meta name="keywords" content="deals, games, free, offers, bundles" />
 
 		<link rel="canonical" href="@enlace" />
 	</HeadContent>
