--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
@@ -41,7 +41,6 @@
 		}
 	}
 
-	<PageTitle>@titulo</PageTitle>
 	<HeadContent>
 		<meta name="og:title" content="@titulo" />
 		<meta name="description" content="@descripcion" />
@@ -50,7 +49,7 @@
 		<meta name="og:image" content="@imagen" />
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
-		<meta name="robots" content="index, follow, noimageindex, noai, noimageai" />
+		<meta name="robots" content="index, follow" />
 		<meta name="keywords" content="@keywords" />
 
 		<link rel="canonical" href="@enlace" />
