--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -251,6 +251,7 @@
                             <a href="/contact" style="text-decoration: none;">@Herramientas.Idiomas.BuscarTexto(idioma, "Contact", "Footer")</a>
                             <a href="/privacy" style="text-decoration: none;">@Herramientas.Idiomas.BuscarTexto(idioma, "Privacy", "Footer")</a>
                             <a href="https://pepeizqapps.com/extension/pepeizq-deals" style="text-decoration: none;">@Herramientas.Idiomas.BuscarTexto(idioma, "Extension", "Footer")</a>
+                            <a href="/compare" style="text-decoration: none;">@Herramientas.Idiomas.BuscarTexto(idioma, "Compare", "Footer")</a>
                         </div>
 
                         <div style="display: flex; flex-direction: column; gap: 5px; width: 100%;">
