--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.JSInterop
+@using Microsoft.VisualBasic
 @using pepeizqs_deals_web.Areas.Identity.Data
 
 @inject UserManager<Usuario> UserManager
@@ -56,6 +57,43 @@
 		<meta name="og:type" content="website" />
 		<meta name="robots" content="index, follow" />
 		<meta name="keywords" content="@keywords" />
+
+		@if (bundlesActuales != null)
+		{
+			<script type="application/ld+json">
+				@{
+					string seoJson = "{" + Environment.NewLine +
+						Strings.ChrW(34) + "@context" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "https://schema.org" + Strings.ChrW(34) + "," + Environment.NewLine +
+						Strings.ChrW(34) + "@type" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "ItemList" + Strings.ChrW(34) + "," + Environment.NewLine +
+						Strings.ChrW(34) + "name" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "PC Game Bundles" + Strings.ChrW(34) + "," + Environment.NewLine +
+						Strings.ChrW(34) + "numberOfItems" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + bundlesActuales.Count.ToString() + Strings.ChrW(34) + "," + Environment.NewLine +
+						Strings.ChrW(34) + "itemListOrder" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "Descending" + Strings.ChrW(34) + "," + Environment.NewLine +
+						Strings.ChrW(34) + "itemListElement" + Strings.ChrW(34) + ": [";
+
+					int i = 0;
+					while (i < bundlesActuales.Count)
+					{
+						if (i != 0)
+						{
+							seoJson = seoJson + ",";
+						}
+
+						seoJson = seoJson + "{" + Environment.NewLine +
+							Strings.ChrW(34) + "@type" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "ListItem" + Strings.ChrW(34) + "," + Environment.NewLine +
+							Strings.ChrW(34) + "position" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + (i + 1).ToString() + Strings.ChrW(34) + "," + Environment.NewLine +
+							Strings.ChrW(34) + "name" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + bundlesActuales[i].NombreBundle + Strings.ChrW(34) + "," + Environment.NewLine +
+							Strings.ChrW(34) + "url" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "https://pepeizqdeals.com/bundle/" + bundlesActuales[i].Id.ToString() + "/" + Herramientas.EnlaceAdaptador.Nombre(bundlesActuales[i].NombreBundle) + "/" + Strings.ChrW(34) + "," + Environment.NewLine +
+							Strings.ChrW(34) + "image" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + bundlesActuales[i].ImagenBundle + Strings.ChrW(34) + "}";
+
+						i += 1;
+					}
+
+					seoJson = seoJson + "]" + Environment.NewLine + "}";
+				}
+
+				@((MarkupString)seoJson)
+			</script>
+		}	
 
 		<link rel="canonical" href="@enlace" />
 	</HeadContent>
