--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -1,6 +1,7 @@
 ﻿@using APIs.Steam
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.VisualBasic
 @using pepeizqs_deals_web.Areas.Identity.Data
 
 @inject UserManager<Usuario> UserManager
@@ -112,6 +113,40 @@
         <meta name="og:type" content="website" />
         <meta name="robots" content="index, follow" />
         <meta name="keywords" content="@keywords" />
+
+        <script type="application/ld+json">
+			@{
+				string seoJson = "{" + Environment.NewLine +
+					Strings.ChrW(34) + "@context" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "https://schema.org" + Strings.ChrW(34) + "," + Environment.NewLine +
+					Strings.ChrW(34) + "@type" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "ItemList" + Strings.ChrW(34) + "," + Environment.NewLine +
+					Strings.ChrW(34) + "name" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "Free PC Games and DLCs to claim" + Strings.ChrW(34) + "," + Environment.NewLine +
+					Strings.ChrW(34) + "numberOfItems" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + juegosActuales.Count.ToString() + Strings.ChrW(34) + "," + Environment.NewLine +
+					Strings.ChrW(34) + "itemListOrder" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "Descending" + Strings.ChrW(34) + "," + Environment.NewLine +
+					Strings.ChrW(34) + "itemListElement" + Strings.ChrW(34) + ": [";
+
+				int i = 0;
+                    while (i < juegosActuales.Count)
+				{
+					if (i != 0)
+					{
+						seoJson = seoJson + ",";
+					}
+
+					seoJson = seoJson + "{" + Environment.NewLine +
+						Strings.ChrW(34) + "@type" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "ListItem" + Strings.ChrW(34) + "," + Environment.NewLine +
+						Strings.ChrW(34) + "position" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + (i + 1).ToString() + Strings.ChrW(34) + "," + Environment.NewLine +
+						Strings.ChrW(34) + "name" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + juegosActuales[i].Nombre + Strings.ChrW(34) + "," + Environment.NewLine +
+						Strings.ChrW(34) + "url" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "https://pepeizqdeals.com/game/" + juegosActuales[i].JuegoId.ToString() + "/" + Herramientas.EnlaceAdaptador.Nombre(juegosActuales[i].Nombre) + "/" + Strings.ChrW(34) + "," + Environment.NewLine +
+						Strings.ChrW(34) + "image" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + juegosActuales[i].Imagen + Strings.ChrW(34) + "}";
+
+					i += 1;
+				}
+
+				seoJson = seoJson + "]" + Environment.NewLine + "}";
+			}
+
+			@((MarkupString)seoJson)
+		</script>
 
         <link rel="canonical" href="@enlace" />
     </HeadContent>
