--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -90,24 +90,27 @@
 
                 if (juego.Analisis != null)
                 {
-                    seoJson = seoJson + "," + Environment.NewLine + Strings.ChrW(34) + "aggregateRating" + Strings.ChrW(34) + ":" + Environment.NewLine + "{" + Environment.NewLine +
+                    if (string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false && string.IsNullOrEmpty(juego.Analisis.Cantidad) == false)
+                    {
+                        seoJson = seoJson + "," + Environment.NewLine + Strings.ChrW(34) + "aggregateRating" + Strings.ChrW(34) + ":" + Environment.NewLine + "{" + Environment.NewLine +
                         Strings.ChrW(34) + "@type" + Strings.ChrW(34) + ":" + Strings.ChrW(34) + "AggregateRating" + Strings.ChrW(34);
 
-                    if (string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false)
-                    {
-                        decimal estrellas = decimal.Parse(juego.Analisis.Porcentaje) / 20;
-                        seoJson = seoJson + "," + Environment.NewLine + Strings.ChrW(34) + "ratingValue" + Strings.ChrW(34) + ":" + estrellas.ToString();
+                        if (string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false)
+                        {
+                            decimal estrellas = decimal.Parse(juego.Analisis.Porcentaje) / 20;
+                            seoJson = seoJson + "," + Environment.NewLine + Strings.ChrW(34) + "ratingValue" + Strings.ChrW(34) + ":" + estrellas.ToString();
+                        }
+
+                        if (string.IsNullOrEmpty(juego.Analisis.Cantidad) == false)
+                        {
+                            string cantidad = juego.Analisis.Cantidad;
+                            cantidad = cantidad.Replace(",", null);
+
+                            seoJson = seoJson + "," + Environment.NewLine + Strings.ChrW(34) + "ratingCount" + Strings.ChrW(34) + ":"  + cantidad;
+                        }
+
+                        seoJson = seoJson + Environment.NewLine + "}";
                     }
-
-                    if (string.IsNullOrEmpty(juego.Analisis.Cantidad) == false)
-                    {
-                        string cantidad = juego.Analisis.Cantidad;
-                        cantidad = cantidad.Replace(",", null);
-
-                        seoJson = seoJson + "," + Environment.NewLine + Strings.ChrW(34) + "ratingCount" + Strings.ChrW(34) + ":"  + cantidad;
-                    }
-
-                    seoJson = seoJson + Environment.NewLine + "}";
                 }
 
                 if (juego.PrecioActualesTiendas != null)
